--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <a href="/blog">Blog</a>
   </h3>
   <h3 class="main-menu mr-3">
-    <a href="mailto:kaneko@campus.tu-berlin.de">Mail</a>
+    <a href="mailto:kaneko@campus.tu-berlin.de">Contact</a>
   </h3>
 </div>
 
@@ -107,8 +107,8 @@
   
 </div>
  <footer class=" mt-2 mb-2 ">
-  <span class="markdownify">Shinji</span>
-  <span >
+  <span class="markdownify"></span>
+  <span style="font-size:0px;">
     &middot;
     <i>
       <a href="https://github.com/darshanbaral/aafu">
@@ -140,7 +140,7 @@
       <p class="markdownify">
   <p>I am a data scientist and a chemical/energy engineer. I am currently completing a master&rsquo;s degree in IT for Energy at Technical University of Berlin.<br>
 I received a B. Eng. in chemical and biological engineering from National Institute of Technology, Ube College in Japan.</p>
-<p>I am open and keen to learn new technologies to improve our life quality! I focus on energy filed using data analysis and machine learning algorithms.</p>
+<p>I am open and keen to learn new technologies to improve quality of life! I research energy using data analysis and machine learning algorithms.</p>
 
 </p>
 
