--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       
     >
       <p class="markdownify">
-  <p>I am a data scientist and a chemical/energy engineer. I am currently completing a master&rsquo;s degree in IT for Energy at Technical University of Berlin.<br>
+  <p>I am a data scientist and a chemical/energy engineer. I have completed a master&rsquo;s degree in IT for Energy at Technical University of Berlin.<br>
 I received a B. Eng. in chemical and biological engineering from National Institute of Technology, Ube College in Japan.</p>
 <p>I am open and keen to learn new technologies to improve quality of life! I research energy using data analysis and machine learning algorithms.</p>
 
@@ -159,7 +159,7 @@ I received a B. Eng. in chemical and biological engineering from National Instit
       
 <dl>
   <dt>M.Sc. in Information Technology for Energy</dt>
-  <dd class="mb-0 ml-3">2018 - Present &middot; Technical University of Berlin, Germany</dd>
+  <dd class="mb-0 ml-3">2018 - 2020 &middot; Technical University of Berlin, Germany</dd>
   
   <dd class="mb-0 ml-4">
     Thesis:
