--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@ I received a B. Eng. in chemical and biological engineering from National Instit
   
   <dd class="mb-0 ml-4">
     Thesis:
-    <a href="https://www.dropbox.com/s/d7rrl1419zzk38f/Master_Thesis_Shinji_Kaneko%28404391%29.pdf?dl=0"
-      ><i>The forecast and impact of day-ahead electricity price in Germany.</i></a
-    >
+    <a href="https://www.dropbox.com/s/d7rrl1419zzk38f/Master_Thesis_Shinji_Kaneko%28404391%29.pdf?dl=0"><i>The forecast and impact of day-ahead electricity price in Germany.</i></a>
   </dd>
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Word Cloud of Thesis:
+    <br><img src="/images/wordcould.png" width="70%" style="margin:-60px 10px -60px;"></p>
   
 </dl>
 
