--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div>
   
   <div style="height:45px; width:45px;">
-    <a href="https://www.dropbox.com/home?preview=CV_Shinji.pdf">
+    <a href="https://www.dropbox.com/s/4pa5bmbck8vsr3k/CV_Shinji.pdf?dl=0">
       <i class="zoomlink mt-1 ai ai-cv"></i>
     </a>
   </div>
