--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <a href="/blog">Blog</a>
   </h3>
   <h3 class="main-menu mr-3">
-    <a href="mailto:kaneko@campus.tu-berlin.de">Contact</a>
+    <a href="mailto:kaneko1992s@outlook.com">Contact</a>
   </h3>
 </div>
 
@@ -89,7 +89,7 @@
 <div class="mt-2 d-flex flex-wrap justify-content-center">
   
   <div style="height:45px; width:45px;">
-    <a href="https://www.linkedin.com/in/shinji-kaneko-b983a5132/">
+    <a href="https://www.linkedin.com/in/shinji1992">
       <i class="zoomlink mt-1 fab fa-linkedin"></i>
     </a>
   </div>
@@ -101,7 +101,7 @@
   </div>
   
   <div style="height:45px; width:45px;">
-    <a href="https://www.dropbox.com/s/4pa5bmbck8vsr3k/CV_Shinji.pdf?dl=0">
+    <a href="https://www.dropbox.com/s/3p9xjaql1onbh1s/CV.pdf?dl=0">
       <i class="zoomlink mt-1 ai ai-cv"></i>
     </a>
   </div>
@@ -256,7 +256,7 @@ I received a B. Eng. in chemical and biological engineering from National Instit
       
       <span onclick="expandAccordion(this)" style="cursor: pointer;">
         <i class="fas fa-pen"></i>
-        Online Course/Guide Project Certificates</span>
+        Online Course &amp; Guide Project Certificates</span>
     </h2>
     <div
       class="panel overflow-hidden"
